--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.navbar-toggler{
+  border: 1px solid #ffffff00!important;
+  color: rgb(0 0 0)!important;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.round{
+  border-bottom-right-radius:  0.75rem!important;
+    border-bottom-left-radius: 0.75rem!important;
 }
+.nav-shadow {
+    box-shadow: 0 .5rem 1rem #d8e5f2!important;
+    
+}
+.navbar-brand{
+  margin-right: 0rem!important;
+}
+.about{    position: absolute;
+  width: 183px;
+  height: 30px;
+  left: 106px;
+  top: 110px;
+  font-family: 'Reptile';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 33px;
+  line-height: 30px;
+  color: #1B1B50;}
