--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,277 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.navbar-toggler{
+  border: 1px solid #ffffff00!important;
+  color: rgb(0 0 0)!important;
 }
+.round{
+  border-bottom-right-radius:  0.75rem!important;
+    border-bottom-left-radius: 0.75rem!important;
+}
+.nav-shadow {
+    box-shadow: 0 .5rem 1rem #d8e5f2!important;
+    
+}
+.navbar-brand{
+  margin-right: 0rem!important;
+}.gradient{    background: linear-gradient(180deg, #FFF6FB 0%, #E7F6FC 33.33%, rgba(213, 224, 255, 0) 100%);
+}
+.icons{
+  
+  width: 85px;
+  color: #a5a6f6;
+  margin: 2rem;
+}
+.about{
+  font-family: 'Reptile';
+font-style: normal;
+font-weight: 500;
+font-size: 33px;
+line-height: 30px;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+color: #1B1B50;
 }
+.sub-text{
+  
+font-family: 'Quicksand';
+font-style: normal;
+font-weight: 700;
+font-size: 18px;
+line-height: 22px;
+text-align: center;
+color: #1B1B50;
+}
+hr{background-color:black!important;
+  width: 85%!important;
+    margin: 0 auto!important;
+  opacity: 1!important;}
+  .sub-text2{font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 33px;
+    /* identical to box height */
+    color: #1B1B50;}
+    .sub-text4{font-family: 'Poppins';
+      font-style: normal;
+      font-weight: 700;
+      font-size: 22px;
+      line-height: 33px;
+      /* identical to box height */
+      color: #1B1B50;}
+    .sub-text3{
+      
+font-family: 'Reptile';
+font-style: normal;
+font-weight: 500;
+font-size: 33px;
+line-height: 134.8%;
+/* or 44px */
+
+text-align: center;
+
+color: #1B1B50;
+    }
+    .para{
+      font-family: 'DM Sans';
+      font-style: normal;
+      font-weight: 700;
+      font-size: 16px;
+      line-height: 179%;
+      /* or 29px */
+      
+      text-align: center;
+      
+      color: #1B1B50!important;
+      }
+      .para2{
+        
+font-family: 'DM Sans';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 179%;
+/* or 29px */
+
+text-align: center;
+
+color: #1B1B50;
+      }
+   .para3{
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 179%;
+    /* or 29px */
+    
+    text-align: center;
+    
+    color: #1B1B50;
+    }
+    .gradient2{background: linear-gradient(165.41deg, #D99EC9 0%, rgba(246, 240, 196, 0) 100%);
+    }
+
+    @font-face {
+      font-family: 'Reptile';
+      src: local('Reptile'), url(../public/Reptile-Medium.otf) format('woff');
+       }
+       .para4{
+        font-family: 'Reptile';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 24px;
+        padding-left: 33px;
+        padding-right: 33px;
+        line-height: 134.8%;
+        color: #1B1B50;}
+        .para5{font-family: 'Poppins';
+          font-style: normal;
+          font-weight: 300;
+          font-size: 14px;
+          line-height: 180%;
+          /* or 25px */
+          
+          text-align: justify;
+          color: #1B1B50;}
+
+          .gradient3{
+            background: rgba(220, 233, 233, 1);
+
+          }
+          .btnorange{
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            padding: 18px 45px;
+            gap: 10px;
+            font-weight: 600;
+            color: white!important;
+background: linear-gradient(297.28deg, #F66E6E 67.01%, rgba(246, 110, 110, 0) 123.71%);
+filter: drop-shadow(0px 2px 6px rgba(255, 22, 64, 0.33));
+border-radius: 70px!important;
+          }
+          .size{
+            width: 100%;
+          }
+          .para5{
+            text-align: justify;
+          }      .para6{
+            text-align: justify;
+    padding-left: 49px!important;
+    padding-right: 49px!important;
+        
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 300;
+font-size: 14px;
+line-height: 206.5%!important;
+/* or 29px */
+
+
+color: rgba(0, 0, 0, 0.8);
+  }
+  .btnblue{
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      padding: 18px 45px;
+      gap: 10px;
+      font-weight: 600;
+      color: white!important;
+      background: linear-gradient(288.62deg, #6E8CF6 42.36%, rgba(110, 213, 246, 0.93) 115.74%);
+      border-radius: 70px!important;
+    }
+    .size{
+      width: 100%;
+    }
+  .colorred{
+    background: linear-gradient(176.88deg, #F3B8BC 2.58%, #FFDAD4 93.07%);
+
+  }
+  .colorred1{
+    background-color:   #ffdad4;
+  }
+  html, body
+  {
+    -ms-content-zooming:none;  
+    touch-action: none;
+    overflow-y: hidden; 
+  overflow-x: hidden; 
+  overflow-y: scroll; 
+  overflow-x: none; 
+  }
+  .colorblue1{
+    background: linear-gradient(270deg, #DADAE4 0.25%, #EEEEF0 24.33%, #F8F8F8 52.08%, #FEFEFE 100%);
+
+  }
+  .newc{
+    background: rgba(246, 110, 110, 1);
+  }
+  .para9{color: white!important;
+    font-family: 'Reptile';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    padding-left: 33px;
+    padding-right: 33px;
+    line-height: 134.8%;
+  }
+  .ps{
+    color: white!important;
+    text-align: justify;
+    padding-left: 49px!important;
+    padding-right: 49px!important;
+        
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 300;
+font-size: 14px;
+line-height: 206.5%!important;
+/* or 29px */
+
+  }
+  .btnblack{
+    display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      padding: 18px 45px;
+      gap: 10px;
+      font-weight: 600;
+      color: white!important;
+      background-color: black!important;
+      border-radius: 70px!important;  }
+      .newco{background: linear-gradient(180deg, #FFF6FB 0%, #E7F6FC 100%);
+      }
+      .para10{
+        color: rgba(0, 0, 0, 0.8)!important;
+    font-family: 'Reptile';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    padding-left: 33px;
+    padding-right: 33px;
+    background: linear-gradient(180deg, #FFF6FB 0%, #E7F6FC 100%);
+    line-height: 134.8%;
+    font-size: x-large;
+    line-height: 3rem;
+      }
+      .footer{
+        color: white;
+background-color: #050506!important;
+      }
+      .hrx{
+        background-color:rgb(255, 255, 255)!important;
+        width: 79%!important;
+          margin: 0 auto!important;
+        opacity: 1!important;      }
+        .in{
+          padding-left: 2.5rem;
+          padding-right: 1rem;
+        }
+        .btn-c{background-color: rgb(233, 244, 255, 1)!important;
+        border-radius: 5rem!important;}
+        .sic{
+          width: 2rem!important;
+        }
