--- a/src/index.css
+++ b/src/index.css
@@ -268,7 +268,7 @@ background-color: #050506!important;
         opacity: 1!important;      }
         .in{
           padding-left: 2.5rem;
-          padding-right: 1rem;
+          display: inline-block!important;
         }
         .btn-c{background-color: rgb(233, 244, 255, 1)!important;
         border-radius: 5rem!important;}
