--- a/src/index.css
+++ b/src/index.css
@@ -268,6 +268,8 @@ background-color: #050506!important;
         opacity: 1!important;      }
         .in{
           padding-left: 2.5rem;
+          display: inline-block!important;
+
         }
         .btn-c{background-color: rgb(233, 244, 255, 1)!important;
         border-radius: 5rem!important;}
